crates/reporter/src/vc/parser/vencord_ast_parser/tests/snapshots/reporter__vc__parser__vencord_ast_parser__tests__template_literal_replace-2.snap
---
source: crates/reporter/src/vc/parser/vencord_ast_parser/tests/mod.rs
expression: patches
---
[
  Patch(
    plugin_id: None,
    all: false,
    no_warn: false,
    find: MatchLike(
      v: Str(FinderDef(
        needle: "disableArrowKeySeek:!0",
      )),
      s: {
        "start": 5836,
        "end": 5860,
      },
    ),
    replacement: [
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "useFullWidth:!0,shouldLink:",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
          )),
          s: {
            "start": 5934,
            "end": 5963,
          },
        ),
        replace: ReplaceLike(
          v: Str("id:\"vc-imgzoom-magnify-modal\",$0"),
          s: {
            "start": 5994,
            "end": 6017,
          },
        ),
        no_warn: false,
      ),
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "(?<=null!=((?:[A-Za-z_$][\\w]*))\\?.{0,20})(?:[A-Za-z_$][\\w]*)\\.(?:[A-Za-z_$][\\w]*),{children:\\1",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
          )),
          s: {
            "start": 6082,
            "end": 6127,
          },
        ),
        replace: ReplaceLike(
          v: Str("\'div\',{onClick:e=>e.stopPropagation(),children:$1"),
          s: {
            "start": 6158,
            "end": 6209,
          },
        ),
        no_warn: false,
      ),
    ],
  ),
  Patch(
    plugin_id: None,
    all: false,
    no_warn: false,
    find: MatchLike(
      v: Str(FinderDef(
        needle: "=\"FOCUS_SENSITIVE\",",
      )),
      s: {
        "start": 6375,
        "end": 6396,
      },
    ),
    replacement: [
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "(?<=\\[(?:[A-Za-z_$][\\w]*)\\.(?:[A-Za-z_$][\\w]*)]:)(?:[A-Za-z_$][\\w]*)&&!(?:[A-Za-z_$][\\w]*)&&\"PINNED\"!==(?:[A-Za-z_$][\\w]*)",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
          )),
          s: {
            "start": 6448,
            "end": 6487,
          },
        ),
        replace: ReplaceLike(
          v: Str("false"),
          s: {
            "start": 6514,
            "end": 6521,
          },
        ),
        no_warn: false,
      ),
    ],
  ),
  Patch(
    plugin_id: None,
    all: false,
    no_warn: false,
    find: MatchLike(
      v: Str(FinderDef(
        needle: ".handleImageLoad)",
      )),
      s: {
        "start": 6576,
        "end": 6595,
      },
    ),
    replacement: [
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "placeholderVersion:(?:[A-Za-z_$][\\w]*),(?=.{0,50}children:)",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
          )),
          s: {
            "start": 6669,
            "end": 6713,
          },
        ),
        replace: ReplaceLike(
          v: Str("...$self.makeProps(this),$0"),
          s: {
            "start": 6744,
            "end": 6773,
          },
        ),
        no_warn: false,
      ),
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "componentDidMount\\(\\){",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
          )),
          s: {
            "start": 6839,
            "end": 6863,
          },
        ),
        replace: ReplaceLike(
          v: Str("$0$self.renderMagnifier(this);"),
          s: {
            "start": 6894,
            "end": 6926,
          },
        ),
        no_warn: false,
      ),
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "componentWillUnmount\\(\\){",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
          )),
          s: {
            "start": 6993,
            "end": 7020,
          },
        ),
        replace: ReplaceLike(
          v: Str("$0$self.unMountMagnifier();"),
          s: {
            "start": 7051,
            "end": 7080,
          },
        ),
        no_warn: false,
      ),
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "componentDidUpdate\\((?:[A-Za-z_$][\\w]*)\\){",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
          )),
          s: {
            "start": 7146,
            "end": 7173,
          },
        ),
        replace: ReplaceLike(
          v: Str("$0$self.updateMagnifier(this);"),
          s: {
            "start": 7204,
            "end": 7236,
          },
        ),
        no_warn: false,
      ),
    ],
  ),
]
